# market-predict

./: .cursorrules  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  PRODUCT.md  RAILWAY_SETUP.md  README.md  VERCEL_SETUP.md  package.json  pnpm-lock.yaml  railway.json  turbo.json  vercel.json
.github/workflows/: main.yml
apps/admin/: next.config.js  package.json  railway.json  vercel.json
apps/admin/src/app/: globals.css  layout.tsx  providers.tsx
apps/ai-engine/: pyproject.toml  requirements.txt
apps/ai-engine/src/: __init__.py  config.py  main.py
apps/ai-engine/src/routers/: health.py  prior.py  sentiment.py
apps/ai-engine/src/services/: prior_generator.py  redis_client.py  sentiment_analyzer.py
apps/api/: package.json  railway.json  tsconfig.json
apps/api/src/: app.ts  index.ts
apps/api/src/lib/: auth.ts  error-handler.ts
apps/api/src/routes/: auth.ts  content.ts  health.ts  markets.ts  trades.ts  users.ts
apps/realtime/: package.json  railway.json  tsconfig.json
apps/realtime/src/: index.ts  server.ts
apps/realtime/src/lib/: auth.ts  connection-manager.ts  message-handler.ts  redis.ts
apps/web/: next.config.js  package.json  railway.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/src/app/: layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: market-card.tsx
infrastructure/docker/: Dockerfile.admin  Dockerfile.ai-engine  Dockerfile.api  Dockerfile.realtime  Dockerfile.web
infrastructure/docker-compose/: docker-compose.dev.yml  docker-compose.yml
infrastructure/nginx/: nginx.conf
(+9 files in other folders)
